--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^5.2.6",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "axios": "^1.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
