--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "tic-tac-toe-from-scratch",
+  "name": "tic-tac-toe",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "main": "/src/index.js",
+  "author": "Antti Hellsten",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
